building casper proto files